samples/_failures_safe/1761143059_7b71f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e6b4d89.c: In function ‘main’:
./samples/SAFE/__tmp_1e6b4d89.c:143:9: error: expected declaration or statement at end of input
  143 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_1e6b4d89.c:143:9: error: expected declaration or statement at end of input
